# cpm_daemon

./: AUTHORS  ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  README  cpm_daemon.c
tests/: testCPM.sh  xps_example.conf
